Comleted mobile view addressed issue with margin causing horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -206,12 +206,18 @@ h5 {
 @media (max-width: 500px) {
   header {
     width: 100%;
+    margin: 0;
   }
 }
 header h1 {
   font-size: 3rem;
   color: #444958;
   padding: 1%;
+}
+@media (max-width: 500px) {
+  header h1 {
+    margin: 2%;
+  }
 }
 header p {
   width: 90%;
@@ -220,8 +226,8 @@ header p {
 }
 @media (max-width: 500px) {
   header p {
-    width: 50%;
-    margin: 1% 0 0 1%;
+    width: 90%;
+    margin: 2% 0 0% 3%;
     padding: 0;
   }
 }
@@ -243,6 +249,7 @@ header img {
 @media (max-width: 500px) {
   #middleWrap {
     width: 100%;
+    padding: 3%;
   }
 }
 #middleWrap #imageWrap {
@@ -254,7 +261,6 @@ header img {
 }
 @media (max-width: 500px) {
   #middleWrap #imageWrap {
-    justify-content: flex-start;
     width: 100%;
   }
 }
@@ -266,8 +272,7 @@ header img {
 @media (max-width: 500px) {
   #middleWrap img {
     display: flex;
-    justify-content: flex-start;
-    width: 450px;
+    width: 100%;
     margin: 3%;
     padding: 0;
   }
@@ -279,16 +284,20 @@ header img {
 }
 @media (max-width: 500px) {
   #middleWrap h1 {
-    width: 500px;
+    width: 100%;
+    margin: 4% 0 0 0%;
   }
 }
 #middleWrap p {
-  margin: 1%;
+  width: 100%;
+  margin: 0%;
   font-size: 1.6rem;
 }
 @media (max-width: 500px) {
   #middleWrap p {
-    width: 470px;
+    width: 100%;
+    padding: 0;
+    margin: 5% 0;
   }
 }
 @media (max-width: 500px) {
@@ -313,20 +322,29 @@ header img {
 }
 @media (max-width: 500px) {
   #walking {
+    padding: 5%;
+    margin: 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
 }
 #walking #bottomWrap {
-  width: 50%;
+  width: 100%;
   padding: 0 4%;
+}
+@media (max-width: 500px) {
+  #walking #bottomWrap {
+    width: 100%;
+  }
 }
 #walking img {
   width: 40%;
 }
 @media (max-width: 500px) {
   #walking img {
-    margin: 5%;
+    width: 90%;
+    margin: 0% 5%;
   }
 }
 #walking h1 {
@@ -351,10 +369,14 @@ header img {
 }
 @media (max-width: 500px) {
   #walking #signUp {
+    border-radius: 5px;
     width: 100%;
+    height: 17%;
+    margin: 10% 0;
   }
 }
 footer {
+  width: 100%;
   height: 100px;
   background-color: #f6f6f6;
   margin-top: 5%;
@@ -364,6 +386,6 @@ footer {
 }
 @media (max-width: 500px) {
   footer {
-    width: 500px;
+    width: 100%;
   }
 }
