--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,21 +5,24 @@
 }
 
 header {
-    @media @phone {
-        width: 100%;
-
-    }
+  @media @phone {
+    width: 100%;
+    margin: 0;
+  }
   h1 {
     .headerFont;
     padding: 1%;
+    @media @phone {
+        margin: 2%;
+    }
   }
   p {
     width: 90%;
     margin: 1%;
     .pFont;
     @media @phone {
-      width: 50%;
-      margin: 1% 0 0 1%;
+      width: 90%;
+      margin: 2% 0 0% 3%;
       padding: 0;
     }
   }
@@ -32,23 +35,22 @@ header {
       padding: 0;
     }
   }
-}
+}  //end header
 
 #middleWrap {
   width: 100%;
   margin: 3% 0 7% 0;
   @media @phone {
-        width: 100%;
+    width: 100%;
+    padding: 3%;
   }
-
-    #imageWrap {
-        .rowDisplay;
-        width: 100%;
-        margin: 0 auto;
-        @media @phone {
-        justify-content: flex-start;
-        width: 100%;
-        }
+  #imageWrap {
+    .rowDisplay;
+    width: 100%;
+    margin: 0 auto;
+    @media @phone {
+      width: 100%;
+    }
   }
   img {
     border-radius: 10px;
@@ -56,8 +58,7 @@ header {
     margin: 2% 0;
     @media @phone {
       display: flex;
-      justify-content: flex-start;
-      width: 450px;
+      width: 100%;
       margin: 3%;
       padding: 0;
     }
@@ -66,17 +67,21 @@ header {
     margin: 1%;
     .headerFont;
     @media @phone {
-      width: 500px;
+      width: 100%;
+      margin: 4% 0 0 0%;
     }
   }
   p {
-    margin: 1%;
+    width: 100%;
+    margin: 0%;
     .pFont;
     @media @phone {
-      width: 470px;
+      width: 100%;
+      padding: 0;
+      margin: 5% 0;
     }
   }
-}
+}  //end middle wrap
 
 #middleWrap #imageWrap img:nth-of-type(2) {
   @media @phone {
@@ -98,17 +103,24 @@ header {
   padding: 5% 0 0 0;
   border-top: 2px solid lightgray;
   @media @phone {
+    padding: 5%;
+    margin: 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
   }
   #bottomWrap {
-    width: 50%;
+    width: 100%;
     padding: 0 4%;
+    @media @phone {
+        width: 100%;
+    }
   }
   img {
     width: 40%;
     @media @phone {
-      margin: 5%;
+      width: 90%;
+      margin: 0% 5%;
     }
   }
   h1 {
@@ -120,19 +132,19 @@ header {
     width: 100%;
     .pFont;
   }
-  #signUp {
-    .buttons(13%;
-    25%;
-    @button-color;
-    );
+  #signUp { .buttons(13%; 25%; @button-color;);
     margin-top: 5%;
     @media @phone {
+      border-radius: 5px;
       width: 100%;
+      height: 17%;
+      margin: 10% 0;
     }
   }
 }
 
 footer {
+  width: 100%;
   height: 100px;
   background-color: #f6f6f6;
   margin-top: 5%;
@@ -140,6 +152,6 @@ footer {
   text-align: center;
   .pFont;
   @media @phone {
-    width: 500px;
+    width: 100%;
   }
 }
